--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 }
 
 #header {
-  background-image: url("aurora-borealis.gif");
+  background-image: url("https://www.udacity.com/blog/wp-content/uploads/2021/01/Cloud-Engineer-Jobs_Blog-scaled.jpeg");
   background-size: cover;
 }
 
