--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ p {
 
 #header p {
   font-size: 60pt;
-  color: #ffffff;
+  color: #ff0000;
   padding-top: 8px;
   margin: 0;
   font-weight: bold;
