--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 }
 
 #header {
-  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fcloud-computing-background&psig=AOvVaw0E13bniIgryjYkKM7Z_BCN&ust=1676805738837000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCNjkr-Kfn_0CFQAAAAAdAAAAABAJ");
+  background-image: url("https://png.pngtree.com/background/20210710/original/pngtree-creative-cloud-technology-hand-poster-background-picture-image_1013393.jpg");
   background-size: cover;
 }
 
